Changes in 1.2.5 release
- Set version identifiers correctly, no other changes.

Changes in 1.2.4 release (not released due to incorrect version numbers)

57673 AccessControlException accessing org.apache.taglibs.standard.xml.accessExternalEntity
37466 Reverted changes that overrode HTTP method when importing local resources.

Changes in 1.2.3 release

57560 Check protocol when resolving on older JREs
57549 Fix reference to old SNAPSHOT version of taglibs-build-tools in pom files.
57548 Update library version number printed by Version class
57547 Fix regression with running on older JREs

XML tags now enable FEATURE_SECURE_PROCESSING when parsing and transforming. The JSTL-specific
EntityResolver also checks the protocol being used against a white-list specified in the system
property org.apache.taglibs.standard.xml.accessExternalEntity in to order to limit access on
older JREs.

Changes in 1.2.2 release [WITHDRAWN due to regressions in older JREs]

57433 Double-check locking in ExpressionEvaluatorManager
57427 1.0 TLDs are missing from -compat jar
57289 XML factories should be located using the JSTL library's ClassLoader

Changes in 1.2.1 release
- Documentation cleanup

Major changes in 1.2.0 release
- Transitioned project from Apache Jakarta to Apache Tomcat
- Implementation of new functionality for JSTL 1.2; requires Java 1.5
- Switched to Maven-based build
- Renamed JARs and modified packaging structure; OSGI metadata added
- XML processing performance improved by direct use of Xalan

The following issues from Bugzilla (https://issues.apache.org/bugzilla) appear related.
However, due to the time since the last 1.1 release some issues may be missing or misclassified.

55608 fmt:bundle tag unnecessarily buffers body content
54544 Loop vars are not reset for fortoken with deferred expression
52637 Broken link
50674 Some maven pom improvments
50462 xalan import should not be optional in maven-bundle-plugin